# DaylightStation

./: .claudeignore  .dockerignore  .env.example  .gitignore  .ignore  AGENTS.md  CLAUDE.local.example.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Readme.md  babel.config.js  build.sh  compose.yaml  dev  dev.sh  docker-compose.test.yml  docker.local.sh  docker.sh  entrypoint.sh  jest.config.js  js.json  node_modules  nodemon.json  package-lock.json  package.json  playwright.config.js  playwright.config.mjs  playwright.prod.config.mjs  run  swap-test.mjs  test-tmp.cjs  test-video-play-tmp.cjs  test_image_webhook.mjs  vitest.config.mjs
.claude/: .gitignore  settings.json  settings.local.json
.claude/hooks/: secret-guard.sh
.github/instructions/: backend.instructions.md  frontend.instructions.md
.github/workflows/: docker-image.yml
.pii-scrub/: filter-repo-map-guard.txt  known-induced-test-files.txt  pii-scrub.mjs
_extensions/audio-bridge/: DESIGN.md
_extensions/audio-router/: audio-router.service
_extensions/barcode-relay/: DEV-STATUS.md  README.md
_extensions/barcode-scanner/: 90-barcode-scanner.rules  barcode-scanner.service  requirements.txt
_extensions/content-barcode-relay/: DEV-STATUS.md  README.md  config.example.yml
_extensions/document-processor/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
_extensions/eink-panel/: BUILD.md  README.md
_extensions/fingerprint/: README.md
_extensions/fitness/: BLE-TROUBLESHOOTING.md  Dockerfile  docker-compose.yaml  package-lock.json  package.json  simulate.mjs  simulation-heartrate.mjs  simulation-jumprope.mjs  simulation.mjs  vibration-simulation.mjs
_extensions/food-scale-relay/: .gitignore  HANDOFF-DS6878.md  README.md  config.example.yml
_extensions/ir-blaster/: .gitignore  LEARNING.md  README.md  config.example.yml
_extensions/musicozy/: avrcp_dispatch.py  web.py
_extensions/obd-relay/: .gitignore  README.md  config.example.yml
_extensions/piano/: README.md  package-lock.json  package.json  simulation.mjs
_extensions/piano-bridge/: DESIGN.md  README.md  pbctl.mjs
_extensions/piano-bridge/app/app/src/main/cpp/: .gitignore  CMakeLists.txt  DexedEngine.cpp  DexedEngine.h  Engine.h  OboeOutput.cpp  OboeOutput.h  SfizzEngine.cpp  SfizzEngine.h  VoiceHost.cpp  VoiceHost.h  native-lib.cpp
_extensions/playback-hub/: README.md  avrcp_dispatch.py  cache_manager.sh  devices.json  headset-hub.sh  peak_meter.py  playback-hub.sh  sync_config.sh  test_peak_meter.py  validate_config.py  web.py
_extensions/portal-keys/: README.md  pkctl.mjs
_extensions/scantron-relay/: .gitignore  OMR-1100-datasheet.md  README.md  config.example.yml
_extentions/fitness/: docker-compose.yaml  package-lock.json  package.json  (+1 more)
backend/: Dockerfile  HARVESTER_TESTS_QUICKSTART.md  HARVEST_TESTS_README.md  api.js  api.mjs  cron.mjs  exe.js  fetch.js  fetch.mjs  fitness.mjs  gratitude.mjs  harvest.integration.test.mjs  harvest.js  health.mjs  home.mjs  index.js  jest.config.js  journalist.mjs  media.mjs  media.test.mjs  package-lock.json  package.json  plex.mjs  printer.mjs  shared-contracts  tts.mjs  websocket.js
cli/: README.md  _argv.mjs  _bootstrap.mjs  _output.mjs  _proto-accuracy.mjs  _proto-graph.mjs  _proto-harmony-eval.mjs  _proto-match.mjs  _proto-melodyfit.mjs  _proto-verify-xml.mjs  _writeAudit.mjs  auth-validator.cli.mjs  backfill-fitness-media-memory.mjs  backfill-fitness-primary-media.mjs  backfill-media-durations.lib.mjs  backfill-media-durations.mjs  backfill-media-durations.test.mjs  backfill-strava-home-sessions.mjs  backfill-toc-offset.cli.mjs  buxfer.cli.mjs  clickup.cli.mjs  contentfilter.cli.mjs  dscli.mjs  enrich-sessions-with-plex.mjs  esp.cli.mjs  fitness-split-session.mjs  fitsync-auth.cli.mjs  fkb.cli.mjs  freshrss.cli.mjs  glossika.cli.mjs  headline-image-backfill.cli.mjs  heal-fitness-sessions.cli.mjs  heal-fitness-sessions.test.mjs  ingest-health-archive.cli.mjs  journalist-debrief-preview.cli.mjs  karaoke-ingest.cli.mjs  komga-toc-backfill.cli.mjs  loop-enrich.cli.mjs  make-piano-prefabs.mjs  make-starter-grooves.mjs  (+21 more)
config/: cutover-flags.yml.example
cron/: Dockerfile  crontab.db  env.db
data-drafts/: super-blocks-seasons.yml
docker/: Dockerfile  entrypoint.sh
docs/: PRD_MessageBus.md  WebsocketMessageBus.Readme.md  _docs-last-updated.txt  docs-last-updated.txt  entityId-migration-complete.md  governance-debug-status.md  installation.md  logging-framework-evaluation.md
frontend/: .eslintrc.cjs  README.md  _pov-preview.html  index.html  jest.config.cjs  package-lock.json  package.json  vite.config.js
logs/: logging-audit-issues.json  prod-session-summary-20260114.md
scripts/: audit-baseline.json  audit-baseline.unit.txt  audit-baseline.vitest.txt  audit-layer-imports.mjs  compile-budget.mjs  debug-plex-season.mjs  debug-season-api.mjs  dev-server.sh  gate-vitest.mjs  loggly-cli.js  loggly-readme.md  migrate-content-structure.sh  migrate-lists-to-watchlists.mjs  migrate-media-memory.mjs  migrate-trigger-config.mjs  migrate-watch-state.mjs  plex-perms-monitor.service  port-manager.mjs  test-env.sh  update-test-imports.mjs
tests/: README.md  _scratch_debug_slots.mjs  _tmp_arcade.mjs  _tmp_spin_measure.cjs  _tmp_wheel_test.mjs
(+10626 files in other folders)
